spacing issue

--- a/frontend/src/pages/aptdetail.css
+++ b/frontend/src/pages/aptdetail.css
@@ -81,7 +81,7 @@ h2 {
 }
 
 .aptlist {
-  margin: 2% 7% 2% 8%;
+  margin: 2% 7% 2% 5%;
 }
 
 .additfees {
